--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-15": "^1.3.0",
-    "react-scripts": "0.9.5",
+    "react-scripts": "^0.9.5",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.5.3",
     "sinon": "^7.2.6"
